--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,9 @@ OLLAMA_CHAT_MODEL=llama3
 OLLAMA_EMBED_MODEL=nomic-embed-text
 DART_API_KEY=your_dart_api_key
 TOP_K=5
+OPENAI_API_KEY=
+GEMINI_API_KEY=
+GEMINI_MODEL=gemini-2.5-flash
 SESSION_SECRET=change-this-session-secret
 ADMIN_EMAIL=admin@local
 ADMIN_PASSWORD=admin1234!
